NEWS: spell check

--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@ GtkSourceView 5 API (which targets GTK 4). After that it helped me implement
 JIT support for GtkSourceView languages. Once that was done it became my
 test case while I wrote the GTK 4 macOS backend and revamped the GL renderer.
 
-It is a simpl and hunble text editor. It does not have all the corner cases
+It is a simple and humble text editor. It does not have all the corner cases
 you'd expect from a text editor yet.
 
 Now that you know this is very much a technology preview release only, you
