--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 40.0
+
+Text Editor for GNOME 40 is here!
+
+This is just a preview release but kick the tires and have some fun!
+
+
 # Text Editor 3.39.92
 
 This is my initial release of gnome-text-editor.
