build: release 41.alpha1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+# Text Editor 41.alpha1
+
+Text Editor 41.alpha1 contains a number of new features and bug
+fixes since our previous release.
+
+ • Initial support for spell checking
+ • Tabs provided by libadwaita
+ • Improved performance while loading documents
+ • Style improvements to overview map, line spacing, search,
+   status pages, open popover, and more.
+ • Additional settings in preferences
+ • Improved auto-save support
+ • A new buffer scheduler to improve performance of background
+   operations.
+ • Support for opening multiple files at once
+ • Translation improvements
+
 # Text Editor 40.0
 
 Text Editor for GNOME 40 is here!
