--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+# Text Editor 41.beta1
+
+Text Editor 41.beta1 contains a number of new features and bug
+fixes since our previous release.
+
+ • Spellcheck improvements
+ • Design updates
+ • Auto-save resilience improvements
+ • Fixes for monitoring files to changes
+ • Preferences panel is now integrated into the window
+ • You can now select different style schemes
+ • Search bar bug fixes
+ • Translation updates
+ • Use new buffer scheduler API in GtkSourceView for background operations
+
 # Text Editor 41.alpha1
 
 Text Editor 41.alpha1 contains a number of new features and bug
