--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# Text Editor 41.0
+
+Text Editor 41.0 is equivalent to 41.beta1 with the addition of
+more translations.
+
 # Text Editor 41.beta1
 
 Text Editor 41.beta1 contains a number of new features and bug
