--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+# Text Editor 41.1
+
+* Fixed navigation using Up/Down from search bar.
+* Disabled use of DBusActivatable=true in .desktop file due to breakage with opening command line arguments without the desktop portal.
+* Improvements to accessibility labels.
+* Translation updates.
+
 # Text Editor 41.0
 
 Text Editor 41.0 is equivalent to 41.beta1 with the addition of
