--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,12 @@
 # Text Editor 41.1
 
-* Fixed navigation using Up/Down from search bar.
-* Disabled use of DBusActivatable=true in .desktop file due to breakage with opening command line arguments without the desktop portal.
-* Improvements to accessibility labels.
-* Translation updates.
+ • Improved styling.
+ • Give access to --filesystem=host in Flatpak until we have
+   an improved document portal story.
+ • Raise editor window when raising a page due to opening by
+   an external program.
+ • Fix keyboard navigation with arrows in search entry.
+ • Fix reordering of editor pages with the keyboard.
 
 # Text Editor 41.0
 
