Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -172,7 +172,7 @@ msgstr "Tipus de lletra personalitzada"
 
 #: data/org.gnome.TextEditor.gschema.xml:82
 msgid "A custom font to use in the editor."
-msgstr "Un tipus de lletra personalitzat per utilitzar a l'editor."
+msgstr "Un tipus de lletra personalitzat per a utilitzar a l'editor."
 
 #: data/org.gnome.TextEditor.gschema.xml:86
 msgid "Style Scheme"
@@ -731,7 +731,7 @@ msgstr "Desa"
 #: src/help-overlay.ui:102
 msgctxt "shortcut window"
 msgid "Save As"
-msgstr "Desa com a"
+msgstr "Anomena i desa"
 
 #: src/help-overlay.ui:108
 msgctxt "shortcut window"
@@ -881,7 +881,7 @@ msgstr "Mou les línies actuals o seleccionades cap avall"
 #: src/help-overlay.ui:278
 msgctxt "shortcut window"
 msgid "Go to line"
-msgstr "Vés a la línia"
+msgstr "Ves a la línia"
 
 #: src/help-overlay.ui:285
 msgctxt "shortcut window"
