Fix broken markup in Brazilian Portuguese help translation

--- a/help/pt_BR/pt_BR.po
+++ b/help/pt_BR/pt_BR.po
@@ -347,7 +347,7 @@ msgid ""
 msgstr ""
 "Ative o painel de pesquisa através do <guiseq><gui>Menu hambúrguer</"
 "gui><gui>Localizar/Substituir...</gui></guiseq> ou ative-o através de "
-"<keyseq><key >Ctrl</key>< chave>H</key></keyseq>."
+"<keyseq><key>Ctrl</key><key>H</key></keyseq>."
 
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:67
