Update Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -101,7 +101,7 @@ msgid ""
 "once."
 msgstr ""
 "En el diàleg trieu els fitxers que voleu obrir i feu clic a "
-"<gui>Obre</gui>. És possible seleccionar múltiples fitxers per obrir-los "
+"<gui>Obre</gui>. És possible seleccionar múltiples fitxers per a obrir-los "
 "alhora."
 
 #. (itstool) path: page/p
@@ -292,7 +292,7 @@ msgid ""
 "Pressing <key>Escape</key> will discard the search panel and the search "
 "result."
 msgstr ""
-"En prémer <key>Escape</key> es descartarà el tauler de cerca i el resultat "
+"En prémer <key>Retorn</key> es descartarà el tauler de cerca i el resultat "
 "de la cerca."
 
 #. (itstool) path: list/title
@@ -359,7 +359,7 @@ msgid ""
 "have to click the button for activating the replace functionality."
 msgstr ""
 "En el cas que obriu el tauler de cerca a través del "
-"<gui>Menú</gui> heu de fer clic al botó per activar la funcionalitat de"
+"<gui>Menú</gui> heu de fer clic al botó per a activar la funcionalitat de"
 " reemplaçament."
 
 #. (itstool) path: item/p
@@ -435,7 +435,7 @@ msgid ""
 "changes as they were originally made."
 msgstr ""
 "En prémer <keyseq> <key>Ctrl</key> <key>Z</key> </keyseq> es desfarà l'últim"
-" canvi fet a un fitxer. Aquesta drecera continuarà desfent els canvis com "
+" canvi fet a un fitxer. Aquesta drecera continuarà desfent els canvis "
 "tal i com es van fer originalment."
 
 #. (itstool) path: section/p
