--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+# Text Editor 42.rc1
+
+This is our first release candidate for GNOME 42. With luck, this will be our
+last release before 42.0. At this point, we consider the project code complete
+until we branch and begin the GNOME 43 cycle.
+
+That doesn't mean there are not bugs or things we want to be different, simply
+that time is here to ship a product.  We hope you enjoy it and responsibly file
+bugs and/or additional design requests.
+
+I'd like to send a special thanks to all the translators who've been working to
+land translations in time for 42, despite the state of the world and the
+struggles involved.
+
+Changes since 42.beta1
+
+ • CSS styling tweaks.
+ • The enchant spellcheck backend will now ignore dictionaries which
+   fail to provide a name which can be displayed to the user. This so far
+   has only been seen on macOS but may affect other platforms.
+ • Updated application metadata and screenshots.
+ • Translation updates.
+
 # Text Editor 42.beta1
 
 This is our first Beta release as we progress towards GNOME 42. A number
