Fix broken markup in Indonesian help translation

--- a/help/id/id.po
+++ b/help/id/id.po
@@ -416,7 +416,7 @@ msgid ""
 "xref=\"#discard_changes\">discarding changes</link>."
 msgstr ""
 "Perubahan yang dilacak bagi suatu berkas akan hilang setelah menutupnya, "
-"atau setelah <<link xref=\"#discard_changes\">membuang perubahan</link>."
+"atau setelah <link xref=\"#discard_changes\">membuang perubahan</link>."
 
 #. (itstool) path: section/title
 #: C/edit-undo-redo.page:40
