Update Catalan translation

--- a/help/ca/ca.po
+++ b/help/ca/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-text-editor main\n"
 "POT-Creation-Date: 2022-02-22 20:08+0000\n"
-"PO-Revision-Date: 2022-02-22 20:08+0000\n"
+"PO-Revision-Date: 2022-03-17 20:08+0000\n"
 "Last-Translator: Jordi Mas i Hernàndez <jmas@softcatala.org>\n"
 "Language-Team: Catalan <gnome@llistes.softcatala.org>\n"
 "Language: ca\n"
@@ -242,8 +242,8 @@ msgid ""
 "GNOME text editor allows you to quickly search in big text files for a "
 "specific text parts. Oftentimes these text parts need to be replaced also."
 msgstr ""
-"L'editor de text del GNOME us permet cercar ràpidament en fitxers de text "
-"grans per a parts de text específiques. Sovint, aquestes parts del text "
+"L'editor de text del GNOME us permet cercar ràpidament parts del text específiques "
+"en fitxers de text grans. Sovint, aquestes parts del text "
 "també han de ser substituïdes."
 
 #. (itstool) path: list/title
@@ -265,7 +265,7 @@ msgstr ""
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:46
 msgid "Add your search term into the entry field."
-msgstr "Afegeiu el terme de cerca al camp d'entrada."
+msgstr "Afegiu el terme de cerca al camp d'entrada."
 
 #. (itstool) path: item/p
 #: C/edit-search-and-replace.page:47 C/edit-search-and-replace.page:70
@@ -283,7 +283,7 @@ msgid ""
 "Pressing <key>Enter</key> will move the cursor to the currently highlighted "
 "search result."
 msgstr ""
-"En prémer <key>Intro</key> es mourà el cursor al resultat de cerca "
+"En prémer <key>Retorn</key> es mourà el cursor al resultat de cerca "
 "actualment ressaltat."
 
 #. (itstool) path: item/p
@@ -292,7 +292,7 @@ msgid ""
 "Pressing <key>Escape</key> will discard the search panel and the search "
 "result."
 msgstr ""
-"En prémer <key>Retorn</key> es descartarà el tauler de cerca i el resultat "
+"En prémer <key>Esc</key> es descartarà el tauler de cerca i el resultat "
 "de la cerca."
 
 #. (itstool) path: list/title
