--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+# Text Editor 42.0
+
+GNOME Text Editor 42.0 is here, as our debut release for GNOME.
+
+We'd like to thank everyone who has contributed to make this happen which is
+impossible to name directly because so much has had to improve across the stack
+to make this possible.
+
+We hope you enjoy Text Editor and find it a pleasing experience.
+
 # Text Editor 42.rc1
 
 This is our first release candidate for GNOME 42. With luck, this will be our
