--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+# Text Editor 42.1
+
+Changes since 42.0
+
+ • Improved preference dialog styling for libadwaita
+ • Build system fixes
+ • Fix icons for zoom controls
+ • Fix titles in save-changes dialog
+ • Translation updates
+
 # Text Editor 42.0
 
 GNOME Text Editor 42.0 is here, as our debut release for GNOME.
