Fix invalid markup in Chinese help translation

--- a/help/zh_CN/zh_CN.po
+++ b/help/zh_CN/zh_CN.po
@@ -90,7 +90,7 @@ msgid ""
 "<keyseq><key>Ctrl</key><key>O</key></keyseq>."
 msgstr ""
 "若要在 GNOME 文本编辑器中打开文件，请使用标题栏中的 <gui style=\"button\">打"
-"开</gui> 和 <gui>浏览文件...</gui> 按钮或按快捷键 keyseq><key>Ctrl</"
+"开</gui> 和 <gui>浏览文件...</gui> 按钮或按快捷键 <keyseq><key>Ctrl</"
 "key><key>O</key></keyseq>。"
 
 #. (itstool) path: page/p
