--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+# Text Editor 42.2
+
+## Changes since 42.1
+
+ • Fix a crash at shutdown after saving state. This didn't cause any data
+   loss, but could be annoying.
+ • Spellcheck underline fixes for various languages
+ • Various robustness fixes for GTK 4
+ • Fixes for inconsistent line-endings
+ • Translation updates
+
 # Text Editor 42.1
 
 Changes since 42.0
