Updated Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -555,7 +555,7 @@ msgstr "Chování"
 
 #: src/editor-preferences-dialog.ui:113
 msgid "Discover Document Settings"
-msgstr "Objevovat nastavení dokumentů"
+msgstr "Rozpoznávat nastavení dokumentů"
 
 #: src/editor-preferences-dialog.ui:114
 msgid "Apply settings using modelines, editorconfig, or sensible defaults"
