--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+# Text Editor 43.0
+
+This release is a recommended update for distributions.
+
+ • The --version command line option now includes copyright and
+   additional version information.
+ • Performance improvements to the Open popover list along with
+   tooltips to display the full filename.
+ • The window title now contains an appropriate tooltip.
+ • Path expanding/collapsing is ignored on Windows.
+ • Do not do document portal checks
+ • Text Editor will always restore session state when enabled,
+   fixing some unexpected behavior in previous releases.
+ • Reload documents after using "Open as Administrator" using admin://
+   GVFS protocol.
+ • Appdata updates
+ • Translation updates
+
 # Text Editor 43.alpha1
 
 This is a development release not intended for end-users.
