Fix invalid markup in Nepali help translation

--- a/help/ne/ne.po
+++ b/help/ne/ne.po
@@ -151,7 +151,7 @@ msgstr "<gui>नयाँ ट्याब</gui> बटन प्रयोग ग
 #. (itstool) path: item/p
 #: C/basics-create-new-file.page:28
 msgid "Press <keyseq><key>Ctrl</key><key>N</key></keyseq>"
-msgstr "keyseq><key>Ctrl</key><key>N</key></keyseq>थिच्नुहोस्"
+msgstr "<keyseq><key>Ctrl</key><key>N</key></keyseq>थिच्नुहोस्"
 
 #. (itstool) path: page/p
 #: C/basics-create-new-file.page:31
@@ -235,7 +235,7 @@ msgid ""
 "gui></guiseq> or activate it via <keyseq><key>Ctrl</key><key>F</key></keyseq>."
 msgstr ""
 "<guiseq><gui>ह्याम्बर्गर मेनु</gui> मार्फत खोजी प्यानल सक्रिय <gui>पार्नुहोस् फेला पार्नुहोस् / "
-"प्रतिस्थापन गर्नुहोस् ...</gui></guiseq> वा <keyseq><key>Ctrl</key><key>F</key></keyseq>एफ "
+"प्रतिस्थापन गर्नुहोस् ...</gui></guiseq> वा <keyseq><key>Ctrl</key><key>F</key></keyseq> एफ "
 "मार्फत सक्रिय पार्नुहोस्।"
 
 #. (itstool) path: item/p
